--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Nunito+Sans&family=Poppins:wght@500;700&display=swap');
+
 body {
   background-color: #D71010;
 }
@@ -111,6 +113,14 @@ body {
 
 .App-link {
   color: #61dafb;
+}
+
+.products {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5%;
 }
 
 @keyframes App-logo-spin {
